# inline-hook

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Hooker.h  HookerArm.cpp  HookerFactory.cpp  HookerFactory.h  HookerThumb.cpp  HookerX86.h  LICENSE  Makefile  README.md  common.h  config.h  hash.c  hash.h  hook.c  hook.h  hooker-test  inline-hook.cpp  inline-hook.h  inline-intel.cpp  inline.c  installer.sh  libc-test  libc-test.c  main.c  main.cpp  test  test.S
got-hooker/: CMakeLists.txt  GotHooker.cpp  GotHooker.h  got-test.cpp  main.cpp  simple-x86-got-hook.cpp  simple-x86-got-hook.h
hooker/: CMakeLists.txt  Hooker.cpp  Hooker.h  HookerArm.cpp  HookerArm.h  HookerError.h  HookerFactory.cpp  HookerFactory.h  HookerThumb.cpp  HookerThumb.h  HookerX64.cpp  HookerX64.h  HookerX86.cpp  HookerX86.h  Singleton.h  singleton.h
lib/: ..／  Makefile  a.c  b.c  foo.c  note  out  test.c  test.h  test2  test2.c
src/: main.cpp
test/: CMakeLists.txt  main.cpp
